--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.6.0",
     "react-paginating": "^1.0.3-react16.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-swipeable": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
